Add like/unlike for POIs, clean up Swagger Definition a bit
